edit index.html, change h1 title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header><h1>Balon</h1></header>
+    <header><h1>Balony</h1></header>
 
     <script src="main.js"></script>
   </body>
